SW-2540 Fix style

--- a/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
+++ b/octoprint_mrbeam/templates/wizard/firstrun_start.jinja2
@@ -1,4 +1,4 @@
-<div data-test="first-run-wizard">
+<div class="row" data-test="first-run-wizard">
     <img loading="lazy" src="{{ url_for('plugin.mrbeam.static', filename='img/welcome_dialog/start.png') }}">
     <br>
     {% trans %}
