--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3837,3 +3837,69 @@ div.hopscotch-bubble .hopscotch-bubble-number {
   color: #e25303;
 }
 /* Laser safety conditions - end */
+
+/* Better together - start */
+.get-better-together h4 {
+  margin-left: 25px;
+  margin-bottom: 15px;
+}
+.get-better-together ul li {
+  list-style: none;
+  display: -webkit-box;
+  width: 90%;
+}
+.get-better-together ul li::before {
+  display: inline-block;
+  margin-right: 20px;
+  color: #e25303;
+  width: 15px !important;
+  height: 15px;
+  border: 2px solid;
+  border-radius: 50%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 11px;
+  vertical-align: middle;
+}
+.get-better-together ul li:first-child::before {
+  content: "i";
+}
+.get-better-together ul li:nth-child(2)::before {
+  content: none;
+}
+.get-better-together ul li:nth-child(2) i {
+  margin-right: 20px;
+  color: #e25303;
+  font-size: 16px;
+  vertical-align: middle;
+}
+.get-better-together ul li p strong {
+  color: #638ba0;
+}
+.get-better-together ul li:last-child {
+  margin-left: 36px;
+}
+.get-better-together input[type="radio"] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 1px solid #9c9c9c;
+  outline: none;
+  margin-right: 10px;
+}
+.get-better-together input[type="radio"]:checked {
+  background-color: #707070;
+}
+.get-better-together #analytics_initial_consent_radio,
+.get-better-together .privacy-policy {
+  padding: 12px 0;
+}
+.get-better-together .privacy-policy {
+  float: right;
+}
+.get-better-together .privacy-policy a {
+  color: #638ba0;
+}
+/* Better together - end */
