--- a/octoprint_mrbeam/templates/wizard/wizard_lasersafety.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_lasersafety.jinja2
@@ -1,1 +1,5 @@
-{% include "lasersafety_genericbody.jinja2" %}
+<div class="row">
+    <div class="span12">
+        {% include "lasersafety_genericbody.jinja2" %}
+    </div>
+</div>
