--- a/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/maintenance_settings.jinja2
@@ -14,7 +14,7 @@
                     </small>
                     <div class="maintenance-links">
                         <label class="checkbox">
-                            <input type="checkbox" data-bind="checked: heavyDutyPrefilter">
+                            <input type="checkbox" data-bind="checked: heavyDutyPrefilter" data-test="maintenance-heavy-duty-prefilter-enable-checkbox">
                             {{ _('Heavy-duty pre-filter in use') }}
                         </label>
                         <a href="{{ _('https://www.mr-beam.org/en') + '/products/vorfilter-mrbeam?utm_source=beamos&utm_medium=beamos&utm_campaign=maintenance_page'}}"
