SW-2884 Add translations (#1704)
* SW-2884 Change image and text

* SW-2884 Change text and styling

* SW-2884 Add German translations

* SW-2884 Fix German translation

* SW-2884 Remove unneeded section

* SW-2884 Add CSS formatting

* SW-2884 Fix babel configuration

The old configuration was only scanning Python files inside directories but not the ones in the root folder

* SW-2884 Add Python translations

* SW-2884 Optimize image for web

* SW-2884 Fix translation

* SW-2884 Fix translation

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3836,6 +3836,23 @@ div.hopscotch-bubble .hopscotch-bubble-number {
 #laser-safety-conditions ul.laser-safety-conditions__ul--last-note li p {
   color: #e25303;
 }
+#laser-safety-conditions ul.laser-safety-conditions__ul--last-note li p strong {
+  color: #333333;
+}
+#laser-safety-conditions h5 {
+  margin-left: 25px;
+}
+.wizard_safety_agreement {
+  margin-top: 40px;
+  margin-left: 25px;
+}
+.wizard_safety_agreement label {
+  font-size: 12px;
+  line-height: 14px;
+}
+.wizard_safety_agreement input {
+  margin-right: 20px;
+}
 /* Laser safety conditions - end */
 
 /* Better together - start */
