--- a/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
@@ -29,7 +29,7 @@
                               <label><input type="radio" name="analytics_init_consent" value="agree" data-bind="checked: analyticsInitialConsent">
                                 <strong>{{ _('Yes, contribute') }}</strong></label>
                               <label><input type="radio" name="analytics_init_consent" value="disagree" data-bind="checked: analyticsInitialConsent">
-                                {{ _('No, disagree') }}</label>
+                                {{ _('No, not at the moment') }}</label>
                             </div>
                         </div>
                         <div class="span6">
