--- a/octoprint_mrbeam/templates/wizard/wizard_guided_tour.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_guided_tour.jinja2
@@ -1,4 +1,4 @@
-<h3>{{ _('Step-by-Step Tour Guide To Your First Laser Job') }}</h3>
+<h3>{{ _('Step-by-Step Guided Tour To Your First Laser Job') }}</h3>
 <p>{{ _('Do you want us to guide you through your first laser job with this step-by-step tour?') }}</p>
 <h4>{{ _('What do you need for this tour:') }}</h4>
 <ul>
