- add translations - fix image - fix one string

--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -35,11 +35,7 @@
             <h4> {{ _("Your Mr Beam II dreamcut [X] laser head has been successfully connected.") }}</h4>
             <p> {{ _(" You can now work even faster with this laser head.") }}</p>
             <p> {{ _("We have adapted the standard material settings to the new laser head so that you can start directly. Attention: Using your personal material settings without adjustment increases the risk of material ignition!") }}</p>
-            <p> {{ _("Heads Up! Your new laser head is so powerful that using the Mr Beam cutting mat is not recommended anymore. Read why and know about alternatives in the ") }} <a
-                    target="_blank"
-                    href="{{ _("https://www.mr-beam.org/en") }}/products/mr-beam-zwei-dreamcut-x-laserkopf">
-{#                TODO new link#}
-                » {{ _("FAQ") }}</a>.</p>
+            <p> {{ _("Heads Up! Your new laser head is so powerful that using the Mr Beam cutting mat is not recommended anymore. Read why and know about alternatives in the <a target='_blank' href='https://www.mr-beam.org/en/products/mr-beam-zwei-dreamcut-x-laserkopf'>FAQ</a>.") }} </p>
             <p> {{ _("All the new features that await you with the dreamcut [X] laser head can be found in this Knowledgebase article:") }} <a
                     target="_blank"
                     href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000693865">
