SW-2958 final text changes (#1706)
* add text improvements, small adjustments
* added image for safety modal
* fixed bug with start of guided tour out of welcome wizard
* remove not needed log

--- a/octoprint_mrbeam/templates/laserhead_changed.jinja2
+++ b/octoprint_mrbeam/templates/laserhead_changed.jinja2
@@ -34,7 +34,8 @@
             <img loading="lazy" src="/plugin/mrbeam/static/img/Welcome.png">
             <h4> {{ _("Your Mr Beam II dreamcut [X] laser head has been successfully connected.") }}</h4>
             <p> {{ _(" You can now work even faster with this laser head.") }}</p>
-            <p> {{ _("We have adapted the standard material settings to the new laser head so that you can start directly. Your personal material settings remain unchanged. To adjust them to the increased performance of the laser head, you must perform tests yourself and save the results.") }}</p>
+            <p> {{ _("We have adapted the standard material settings to the new laser head so that you can start directly. Attention: Using your personal material settings without adjustment increases the risk of material ignition!") }}</p>
+            <p> {{ _("Heads Up! Your new laser head is so powerful that using the Mr Beam cutting mat is not recommended anymore. Read why and know about alternatives in the <a target='_blank' href='https://www.mr-beam.org/en/products/mr-beam-zwei-dreamcut-x-laserkopf'>FAQ</a>.") }} </p>
             <p> {{ _("All the new features that await you with the dreamcut [X] laser head can be found in this Knowledgebase article:") }} <a
                     target="_blank"
                     href="{{ _("https://support.mr-beam.org/en") }}/support/solutions/articles/43000693865">
@@ -69,7 +70,7 @@
         <div>
             <p><img loading="lazy" src="/plugin/mrbeam/static/img/10W_sticker.png"></p>
             <h4> {{ _("Please place the included sticker on your Mr Beam!") }}</h4>
-            <p> {{ _('Please cover the 5W safety label on the back of your Mr Beam with the new 10W label.') }}</p>
+            <p> {{ _('To maintain legal requirements, it is mandatory to update the safety labels on your Mr Beam laser cutter. Put the sticker with updated power and wavelength on top of the existing label like shown in the example.') }}</p>
         </div>
     </div>
     {# Steps for laserhead x  - END #}
