SW-2542 fix analytics settings (#1707)
* Undo tab required change
* Fix analytics settings

Co-authored-by: Josef-MrBeam <81746291+Josef-MrBeam@users.noreply.github.com>

--- a/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
@@ -2,7 +2,7 @@
 {# Wording changes must be done in both templates: wizard_analytics.jinja and analytics_settings.jinja !! #}
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! #}
 
-<div class="get-better-together">
+<div class="get-better-together" id="settings_analytics">
    <div class="row">
        <div class="span12">
             <img class="hide" loading="lazy" src="{{ url_for('plugin.mrbeam.static', filename='img/getting-better-together.png') }}">
@@ -26,9 +26,9 @@
                     <div class="row-fluid">
                         <div class="span6">
                             <div id="analytics_initial_consent_radio">
-                              <label><input type="radio" name="analytics_init_consent" value="agree" data-bind="checked: analyticsInitialConsent">
+                              <label><input type="radio" name="analytics_consent" value="agree" data-bind="checked: analyticsRadioBtnValue()">
                                 <strong>{{ _('Yes, contribute') }}</strong></label>
-                              <label><input type="radio" name="analytics_init_consent" value="disagree" data-bind="checked: analyticsInitialConsent">
+                              <label><input type="radio" name="analytics_consent" value="disagree" data-bind="checked: analyticsRadioBtnValue()">
                                 {{ _('No, not at the moment') }}</label>
                             </div>
                         </div>
