--- a/octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2
+++ b/octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2
@@ -1,4 +1,42 @@
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! #}
 {# Wording changes must be done in both templates: wizard_analytics.jinja and analytics_settings.jinja !! #}
 {# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! #}
-{% include "settings/analytics_settings.jinja2" %}
+<div class="get-better-together">
+   <div class="row">
+       <div class="span12">
+        <img class="hide" loading="lazy" src="{{ url_for('plugin.mrbeam.static', filename='img/getting-better-together.png') }}">
+        <h4>{{ _('Better together') }}</h4>
+        <ul>
+            <li>
+                <p>
+                    {{ _('We know that your Mr Beam is important to you, and we want to make it even better. That\'s why we\'re asking for your help in improving it by sharing optional diagnostic and usage data. These data would allow us to better understand your needs and preferences, leading to faster identification and resolution of issues, and ultimately, improved features and functionality.') }}
+                <br>
+                <br>
+                    {{ _('We understand that your privacy is crucial, and we want to assure you that none of the data collected includes your personal information such as your name, login details, designs, or any other private content. You are in full control, and you can change your mind at any time by going to <strong>"Settings > Better together"</strong>.') }}
+                </p>
+            </li>
+            <li>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <p>
+                    {{ _('Join us and shape the future of Mr Beam Products. Together, we can make them even more amazing!"') }}
+                </p>
+            </li>
+            <li>
+                <div class="row-fluid">
+                    <div class="span6">
+                        <div id="analytics_initial_consent_radio">
+                          <label><input type="radio" name="analytics_init_consent" value="agree" data-bind="checked: analyticsInitialConsent">
+                            <strong>{{ _('Yes, contribute') }}</strong></label>
+                          <label><input type="radio" name="analytics_init_consent" value="disagree" data-bind="checked: analyticsInitialConsent">
+                            {{ _('No, not at the moment') }}</label>
+                        </div>
+                    </div>
+                    <div class="span6">
+                        <div class="privacy-policy"><a target="_blank" href="{{ url_for('plugin.mrbeam.static', filename='docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}">{{ _('Privacy policy') }}</a></div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+       </div>
+    </div>
+</div>
