- fix failing analytics cypress test

--- a/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
+++ b/octoprint_mrbeam/templates/settings/analytics_settings.jinja2
@@ -33,7 +33,7 @@
                             </div>
                         </div>
                         <div class="span6">
-                            <div class="privacy-policy"><a target="_blank" href="{{ url_for('plugin.mrbeam.static', filename='docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}">{{ _('Privacy policy') }}</a></div>
+                            <div class="privacy-policy"><a target="_blank" href="{{ url_for('plugin.mrbeam.static', filename='docs/MrBeamAnalytics-PrivacyPolicy_en.pdf') }}" data-test="mrbeam-ui-settings-better-together-privacy-policy-btn">{{ _('Privacy policy') }}</a></div>
                         </div>
                     </div>
                 </li>
