SW-2972 Remove lazy loading on images inside modal windows
This is due to the effect of lazy loading on rendering the position of the modal window where it will not be considered in the height calculations and thus the window will always not be vertically centered

--- a/octoprint_mrbeam/templates/support_genericbody.jinja2
+++ b/octoprint_mrbeam/templates/support_genericbody.jinja2
@@ -3,17 +3,17 @@
     <tr>
         <td class="welcome-wizard-end-row">
             <a href="https://www.youtube.com/channel/UC8CIMavXllp6S61JgEqSm4A?utm_source=beamos&utm_medium=beamos&utm_campaign=welcome_dialog" target="_blank">
-                <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/youtube_icon.png">
+                <img src="/plugin/mrbeam/static/img/welcome_dialog/youtube_icon.png">
             </a>
         </td>
         <td class="welcome-wizard-end-row">
             <a href="https://mr-beam.freshdesk.com/support/solutions?utm_source=beamos&utm_medium=beamos&utm_campaign=welcome_dialog" target="_blank">
-                <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/support_icon.png">
+                <img src="/plugin/mrbeam/static/img/welcome_dialog/support_icon.png">
             </a>
         </td>
         <td class="welcome-wizard-end-row">
             <a onclick="window.mrbeam.viewModels.wizardWhatsnewViewModel.startGuidedTour()" href="#">
-                <img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/tour_icon.png">
+                <img src="/plugin/mrbeam/static/img/welcome_dialog/tour_icon.png">
             </a>
         </td>
     </tr>
