--- a/octoprint_mrbeam/templates/wizard/firstrun_end.jinja2
+++ b/octoprint_mrbeam/templates/wizard/firstrun_end.jinja2
@@ -1,4 +1,4 @@
-<img loading="lazy" src="/plugin/mrbeam/static/img/welcome_dialog/finish_social_media_image.png">
+<img src="/plugin/mrbeam/static/img/welcome_dialog/finish_social_media_image.png">
 
 <h3>{{ _('Get creative with your Mr Beam laser cutter!') }}</h3>
 
