--- a/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
+++ b/octoprint_mrbeam/templates/mrbeam_initscript.jinja2
@@ -16,6 +16,7 @@
     var MRBEAM_LASER_HEAD_SERIAL = "{{ laserhead_serial }}";
     var MRBEAM_LASER_HEAD_MODEL = "{{ laserhead_model }}";
     var MRBEAM_GRBL_VERSION = "{{ grbl_version }}";
+    var MRBEAM_HIGH_TMP_WARNING = {{ "true" if high_temperature_warning else "false" }};
     var INIT_TS_MS = "{{ init_ts_ms }}";
     var INITIAL_CALIBRATION = false;
 
