--- a/octoprint_mrbeam/templates/modals/temperature_warning.jinja2
+++ b/octoprint_mrbeam/templates/modals/temperature_warning.jinja2
@@ -4,8 +4,10 @@
     </div>
     <div class="modal-body">
         <p>{{ _("Despite that the laser head is making a cooling break, the temperature in the device is increasing steadily.") }}</p>
-            <img src="/plugin/mrbeam/static/img/temperature_warning.png">
-            <p>{{ _('Attention: This can be a hint towards a fire. Check on your Mr Bean immediately and make sure, everything is alright.') }}</p>
+        <img src="/plugin/mrbeam/static/img/temperature_warning.png">
+        <div class="warning">
+            <span>{{ _('Attention: This can be a hint towards a fire. Check on your Mr Bean immediately and make sure, everything is alright.') }}</span>
+        </div>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary"
