--- a/octoprint_mrbeam/templates/modals/temperature_warning.jinja2
+++ b/octoprint_mrbeam/templates/modals/temperature_warning.jinja2
@@ -3,14 +3,16 @@
         <h3>{{ _('Temperature Warning, please check your Mr Beam!') }}</h3>
     </div>
     <div class="modal-body">
-        <p>{{ _("Despite that the laser head is making a cooling break, the temperature in the device is increasing steadily.") }}</p>
         <img src="/plugin/mrbeam/static/img/temperature_warning.png">
         <div class="warning">
-            <span>{{ _('Attention: This can be a hint towards a fire. Check on your Mr Bean immediately and make sure, everything is alright.') }}</span>
+            <span>{{ _('Attention:<br>The temperature in your Mr Beam is higher than usual.<br><br>This is an indication of a fire. Check the working area to make sure that everything is alright!') }}</span>
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary"
+        <div class="temperature_warning_footer_text">
+            <span>{{ _("Your Mr Beam can only be used again when the temperature drops further. This may take a few minutes.")}}</span>
+            <button class="btn btn-primary"
                 aria-hidden="true" data-bind="click: $root.dismissTemperatureWarning">{{ _('All good!') }}</button>
+        </div>
     </div>
 </div>
