SW-3054 mvp fire detection (#1730)
* add high temperature warning
* add high temperature handling in analytics, printer, leds, compressor and exhaust
* play sound on message show
* ignore led events on high_temperature_warning except shutdown
* bumped analytics version
* only play sound if it was not played in the last 5 minutes
* add translation

---------

Co-authored-by: Ahmed Salem <85931758+ahmed-mrbeam@users.noreply.github.com>

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3628,6 +3628,36 @@ button#terminal-send {
   color: #e25303;
 }
 
+/* Hard refresh overlay */
+
+/* Temperature Warning Modal */
+#temperature_warning_modal {
+  width: 700px;
+  margin-left: -350px;
+}
+#temperature_warning_modal .warning {
+  color: #e25303;
+  font-weight: bold;
+  display: flex;
+}
+#temperature_warning_modal .warning:before {
+  content: "\f071";
+  font-family: FontAwesome3, serif;
+  margin-right: 20px;
+  color: #e25303;
+  font-size: 30px;
+  margin-top: 10px;
+}
+#temperature_warning_modal .temperature_warning_footer_text {
+  display: flex;
+}
+#temperature_warning_modal .temperature_warning_footer_text span {
+  color: #6d6d6d;
+  text-align: left;
+  margin-right: 70px;
+}
+/* Temperature Warning Modal */
+
 /* Material Store */
 
 #materialstore_tab_btn .notify-icon {
