--- a/octoprint_mrbeam/templates/modals/high_temperature_warning.jinja2
+++ b/octoprint_mrbeam/templates/modals/high_temperature_warning.jinja2
@@ -7,8 +7,8 @@
         <div class="warning">
             <span>
                 <p>{{ _('Attention:<br>The temperature in your Mr Beam is higher than usual.<br><br>This is an indication of a fire. Check the working area to make sure that everything is alright!') }}</p>
-            <p data-bind="visible: level() === 1">{{ _('If there is a job running it will be canceled if the temperature stays out of the expected range.') }}</p>
-            <p data-bind="visible: level() === 2">{{ _('Any running job was canceled to prevent more damage.') }}</p>
+                <p data-bind="visible: level() === 1">{{ _('If there is a job running it will be canceled if the temperature stays out of the expected range.') }}</p>
+                <p data-bind="visible: level() === 2">{{ _('Any running job was canceled to prevent damage.') }}</p>
             </span>
         </div>
     </div>
