--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -194,8 +194,8 @@
                 </div>
 
                 <div id="material_info">
-                    <p>
-                        <i class="icon-warning-sign" style="color:red;"
+                    <p class="safety-note-outer">
+                        <i class="icon-warning-sign"
                            data-bind="visible: material_safety_notes()"></i>
                         <span id="safety_notes" class="" data-bind="text: material_safety_notes, css:{ incompatible_safety_warning: !$root.selected_material_compatibility() }"></span>
                     </p>
