--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -317,6 +317,10 @@
                                 </div>
                             </div>
 
+                            <span id="settings__span--speed-warning" class="hidden">
+                            {{ _('Please remember, lowering the cutting speed can produce more heat and thus, among other risk factors, can ignite certain easily-flammable materials.') }}
+                            </span>
+
                             <div class="control-group">
                                 <div class="line-control-and-label" data-bind="visible: show_line_color_mappings"
                                      data-toggle="tooltip" data-placement="right"
